--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     color: hsl(0, 0%, 67%);
     font-family: monospace;
     font-size: small;
-    margin: 25px 25px 25px 25px;
+    margin: 30px 30px 30px 30px;
 }
 
 h1 {
@@ -12,4 +12,13 @@ h1 {
 
 h2 {
     font-size: medium;
+}
+
+img {
+    margin-left: -10px;
+    margin-top: -10px;
+}
+
+.nav-bar {
+    padding 10px 10px 10px 10px;
 }
