--- a/style.css
+++ b/style.css
@@ -27,14 +27,13 @@ h2 {
     font-size: medium;
 }
 
-img {
-    margin-left: -10px;
-    margin-top: -10px;
-}
-
 .nav-bar {
     padding: 10px 10px 10px 10px;
     background-color: hsl(135, 14%, 11%);
     display: flex;
     flex-direction: column;
+    width: 375px;
+}
+.links {
+    padding: 10px 10px 10px 10px;
 }
