--- a/styles.css
+++ b/styles.css
@@ -536,6 +536,10 @@ video {
   margin-bottom: 1rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .-mt-10 {
   margin-top: -2.5rem;
 }
@@ -548,12 +552,12 @@ video {
   margin-bottom: 0.25rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .ml-5 {
@@ -568,16 +572,24 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-28 {
   height: 7rem;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-6 {
   height: 1.5rem;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-4 {
+  height: 1rem;
 }
 
 .w-5\/6 {
@@ -588,16 +600,16 @@ video {
   width: 7rem;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-6 {
   width: 1.5rem;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
-.w-5 {
-  width: 1.25rem;
+.w-4 {
+  width: 1rem;
 }
 
 .list-disc {
@@ -616,6 +628,10 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.bg-cover {
+  background-size: cover;
 }
 
 .pb-4 {
@@ -659,11 +675,6 @@ video {
   color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
-.text-slate-800 {
-  --tw-text-opacity: 1;
-  color: rgb(30 41 59 / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -671,6 +682,14 @@ video {
 .hover\:text-slate-600:hover {
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:inline {
+  display: inline;
+}
+
+.group:hover .group-hover\:w-4 {
+  width: 1rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -711,8 +730,20 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
   .md\:w-4\/6 {
     width: 66.666667%;
+  }
+
+  .md\:leading-normal {
+    line-height: 1.5;
   }
 }
 
@@ -725,5 +756,11 @@ video {
 @media (min-width: 1280px) {
   .xl\:w-2\/4 {
     width: 50%;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:w-5\/12 {
+    width: 41.666667%;
   }
 }
