--- a/styles.css
+++ b/styles.css
@@ -540,16 +540,16 @@ video {
   margin-top: 0.25rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .-mt-10 {
   margin-top: -2.5rem;
 }
 
 .ml-20 {
   margin-left: 5rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
 }
 
 .mb-3 {
@@ -576,6 +576,10 @@ video {
   display: none;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-28 {
   height: 7rem;
 }
@@ -584,16 +588,12 @@ video {
   height: 1.25rem;
 }
 
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
 .w-5\/6 {
   width: 83.333333%;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .w-28 {
@@ -604,12 +604,8 @@ video {
   width: 1.25rem;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-4 {
-  width: 1rem;
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .list-disc {
@@ -686,10 +682,6 @@ video {
 
 .group:hover .group-hover\:inline {
   display: inline;
-}
-
-.group:hover .group-hover\:w-4 {
-  width: 1rem;
 }
 
 @media (prefers-color-scheme: dark) {
