--- a/input.css
+++ b/input.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+[x-cloak] {
+    display: none !important;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    padding-left: calc(100vw - 100%);
+    box-sizing: border-box;
+}
+
+body:hover {
+    overflow: auto;
+    width: 100%;
+}
