--- a/styles.css
+++ b/styles.css
@@ -579,6 +579,10 @@ video {
   height: 7rem;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .h-7 {
   height: 1.75rem;
 }
@@ -591,16 +595,16 @@ video {
   height: 1.25rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .w-5\/6 {
   width: 83.333333%;
 }
 
 .w-28 {
   width: 7rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-7 {
@@ -613,10 +617,6 @@ video {
 
 .w-5 {
   width: 1.25rem;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .flex-shrink-0 {
@@ -647,10 +647,6 @@ video {
 
 .self-center {
   align-self: center;
-}
-
-.border-2 {
-  border-width: 2px;
 }
 
 .bg-clip-content {
@@ -684,6 +680,10 @@ video {
   font-style: italic;
 }
 
+.leading-loose {
+  line-height: 2;
+}
+
 .leading-relaxed {
   line-height: 1.625;
 }
@@ -715,12 +715,8 @@ video {
   opacity: 0;
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.opacity-100 {
+  opacity: 1;
 }
 
 .hover\:text-slate-600:hover {
@@ -780,6 +776,10 @@ video {
   opacity: 0.5;
 }
 
+.dark .group:hover .dark\:group-hover\:opacity-25 {
+  opacity: 0.25;
+}
+
 .dark .group:hover .dark\:group-hover\:brightness-95 {
   --tw-brightness: brightness(.95);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -800,6 +800,10 @@ video {
 
   .md\:leading-normal {
     line-height: 1.5;
+  }
+
+  .md\:leading-relaxed {
+    line-height: 1.625;
   }
 }
 
